config-root/namespaces/jx-production/spring-boot-app-feb9th/spring-boot-app-feb9th-svc.yaml
# Source: spring-boot-app-feb9th/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-feb9th
  labels:
    chart: "spring-boot-app-feb9th-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-boot-app-feb9th-spring-boot-app-feb9th
