config-root/namespaces/jx-production/spring-boot-app-feb9th/spring-boot-app-feb9th-ingress.yaml
# Source: spring-boot-app-feb9th/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: spring-boot-app-feb9th
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: spring-boot-app-feb9th
              servicePort: 80
      host: spring-boot-app-feb9th-jx-production.devopsnextgenlatestdal13-f3fc6b3f137d049465f1eda82e10db30-0000.us-south.containers.appdomain.cloud
